# apix

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  appveyor.yml  build.rs  wrapper.h
apps/: CMakeLists.txt  apixcli.c  apixsrv.c  cli.c  echo-server.c
apps/rust-apix-websocket-proxy/: Cargo.toml
apps/rust-apix-websocket-proxy/src/: bak.rs  main.rs
apps/rust-apixsrv/: Cargo.toml
apps/rust-apixsrv/src/: main.rs
demos/: CMakeLists.txt  apix-cli.c  apix-client-3333.c  apix-client-8888.c  apix-client-serial-3333.c  apix-client-serial.c  apix-client-tcp-3333.c  apix-client-tcp-8888.c  apix-client-tcp.c  apix-client.c  apix-debugger.c  apix-server.c  cli.c  cli.h
examples/: apixcli.c  apixsrv.c  cli.h  echo-server.c
examples/rust-apixsrv/src/: main.rs
ffi/go/: apix_test.go  go.mod
ffi/go/apix/: apix.go
ffi/go/log/: log.go
ffi/go/srrp/: srrp.go
ffi/python/: apix.py  srrp.py  test.py
go/: apix_test.go
go/apix/: apix.go
go/srrp/: srrp.go
libapix-sys/: Cargo.toml  build.rs  wrapper.h
src/: CMakeLists.txt  apix-posix.c  apix-posix.h  apix-private.h  apix-stm32.c  apix-stm32.h  apix.c  apix.h  atbuf.c  atbuf.h  crc16.c  crc16.h  json.c  json.h  lib.rs  log.c  log.h  ringbuf.c  ringbuf.h  srrp.c  srrp.h  str.c  str.h  svcx.c  svcx.h  vec.c  vec.h
tests/: CMakeLists.txt  test_apix.c  test_atbuf.c  test_json.c  test_log.c  test_opt.c  test_ringbuf.c  test_srrp.c  test_svcx.c
