[package]
name = "apix-websocket-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tungstenite = { git = "https://github.com/snapview/tungstenite-rs" }
tokio-tungstenite = "*"
apix = { path = "../../" }
json = "0.12.4"
log = "0.4"
simple_logger = "4.1"
env_logger = "0.10.0"
ctrlc = "3.2"
futures-util = "0.3.28"
